--- a/javaFxModule/build.gradle
+++ b/javaFxModule/build.gradle
@@ -64,7 +64,7 @@ jfx {
     verbose = true
     mainClass = 'nkp.pspValidator.gui.Main'
     jfxAppOutputDir = "build/jfx/app"
-    jfxMainAppJarName = "KomplexniValidatorGUI.jar"
+    jfxMainAppJarName = "ValidatorEpublikaciGUI.jar"
     deployDir = "src/main/deploy"
     useEnvironmentRelativeExecutables = true
     libFolderName = "lib"
@@ -82,10 +82,10 @@ jfx {
     //bundler = 'exe,linux.app,deb,rpm,dmg'
     //bundler = 'exe'
     //bundler = 'linux.app'
-    // vytvori javaFxModule\build\jfx\native\KomplexniValidator, jeste je potreba pridat fDMF a vyrobit instalator
+    // vytvori javaFxModule\build\jfx\native\ValidatorEpublikaci, jeste je potreba pridat fDMF a vyrobit instalator
 
     //bundler = 'windows.app'//bundler='ALL'
-    appName = 'KomplexniValidatorGUI'
+    appName = 'ValidatorEpublikaciGUI'
     nativeReleaseVersion = "2.1"
 
     //additionalAppResources = ['../sharedModule/src/main/resources/nkp/pspValidator/shared','src/main/resources/config']
@@ -101,11 +101,11 @@ jfx {
 //jfxNative
 
 //bundler = 'windows.app'
-//V javaFxModule\build\jfx\native\KomplexniValidator vytvori KomplexniValidator.exe, adresar app s .jar, pribalenym jre, zatim
+//V javaFxModule\build\jfx\native\ValidatorEpublikaci vytvori ValidatorEpublikaci.exe, adresar app s .jar, pribalenym jre, zatim
 //Tohle pouzit s necim jako Inno Setup a vyrobit instalator vcetne fDMF
 
 //bundler = 'exe'
-//Vytvori instalator javaFxModule\build\jfx\native\KomplexniValidatorGUI-version.exe
+//Vytvori instalator javaFxModule\build\jfx\native\ValidatorEpublikaciGUI-version.exe
 
 //32b instalator Win bude problem: https://github.com/FibreFoX/javafx-gradle-plugin/issues/22
 
