update dev config

--- a/javaFxModule/src/main/resources/dev/config-linux.properties
+++ b/javaFxModule/src/main/resources/dev/config-linux.properties
@@ -9,9 +9,9 @@ validation.log_dir=/home/martin/tmp
 #jpylyzer.dir=/something/fake/to/disable
 #imageMagick.dir=
 #imageMagick.dir=/something/fake/to/disable
-kakadu.dir=/home/martin/Software/KDU7A2_Demo_Apps_for_Centos7-x86-64_170827
+#kakadu.dir=/home/martin/Software/KDU7A2_Demo_Apps_for_Centos7-x86-64_170827
 #kakadu.dir=/something/fake/to/disable
-mp3val.dir=/home/martin/Software/mp3val-0.1.8-src
+#mp3val.dir=/home/martin/Software/mp3val-0.1.8-src
 #mp3val.dir=/something/fake/to/disable
 #shntool.dir=
 #shntool.dir=/something/fake/to/disable
