--- a/javaFxModule/src/main/resources/dev/config-mac.properties
+++ b/javaFxModule/src/main/resources/dev/config-mac.properties
@@ -4,9 +4,9 @@ validatorConfig.dir=/Users/martin/IdeaProjects/validator-e-publikaci/sharedModul
 validation.log_dir=/Users/martin/tmp
 
 #external utils
-jhove.dir=/Users/martin/Software/jhove
+#jhove.dir=/Users/martin/Software/jhove
 #jhove.dir=/something/fake/to/disable
-jpylyzer.dir=/Users/martin/Software/jpylyzer-1.17.0/jpylyzer
+#jpylyzer.dir=/Users/martin/Software/jpylyzer-1.17.0/jpylyzer
 #jpylyzer.dir=/something/fake/to/disable
 #imageMagick.dir=
 #imageMagick.dir=/something/fake/to/disable
