--- a/javaFxModule/src/main/resources/dev/config-win.properties
+++ b/javaFxModule/src/main/resources/dev/config-win.properties
@@ -3,19 +3,19 @@ validatorConfig.dir=C:\\Users\\Lenovo\\IdeaProjects\\psp-validator\\sharedModule
 validation.log_dir=C:\\Users\\Lenovo\\Documents\\tmp
 
 #external utils
-jhove.dir=C\:\\Users\\Lenovo\\Documents\\software\\jhove
+#jhove.dir=C\:\\Users\\Lenovo\\Documents\\software\\jhove
 #jhove.dir=/something/fake/to/disable
-jpylyzer.dir=C\:\\Users\\Lenovo\\Documents\\software\\jpylyzer_1.18.0_win64
+#jpylyzer.dir=C\:\\Users\\Lenovo\\Documents\\software\\jpylyzer_1.18.0_win64
 #jpylyzer.dir=/something/fake/to/disable
 #imageMagick.dir=
 #imageMagick.dir=/something/fake/to/disable
-kakadu.dir=C\:\\Program Files (x86)\\Kakadu
+#kakadu.dir=C\:\\Program Files (x86)\\Kakadu
 #kakadu.dir=/something/fake/to/disable
-mp3val.dir=C\:\\Program Files\\mp3val-0.1.8_with_frontend-0.1.1-bin-win32
+#mp3val.dir=C\:\\Program Files\\mp3val-0.1.8_with_frontend-0.1.1-bin-win32
 #mp3val.dir=/something/fake/to/disable
-shntool.dir=C\:\\Program Files\\shntool-3.0.10
+#shntool.dir=C\:\\Program Files\\shntool-3.0.10
 #shntool.dir=/something/fake/to/disable
-checkmate.dir=C\:\\Program Files\\Checkmate
+#checkmate.dir=C\:\\Program Files\\Checkmate
 #checkmate.dir=/something/fake/to/disable
 
 #dictionaries
