--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,9 @@
+//works with gradle 5.6.4, version 6 does not work due to lack of support for javafx-gradle-plugin
+//https://medium.com/@czerwinb/how-to-install-a-specific-gradle-version-on-your-mac-beab35051ee8
+//https://www.jetbrains.com/help/idea/gradle.html#gradle_version_install
+
 group 'nkp.pspValidator'
-version '2.0'
+version '2.1'
 
 System.setProperty("file.encoding", "UTF-8")
 
