--- a/javaFxModule/version.gradle
+++ b/javaFxModule/version.gradle
@@ -3,5 +3,7 @@ gradle.ext {
     //javafxGradlePluginVersion = '8.7.1-SNAPSHOT'
     //javafxGradlePluginVersion = '8.7.0'
     //resi problem s gradlem 3.3 https://github.com/FibreFoX/javafx-gradle-plugin/issues/52
+    //javafxGradlePluginVersion = '8.7.0'
     javafxGradlePluginVersion = '8.8.0'
+    //javafxGradlePluginVersion = '8.8.2'
 }
