--- a/modules/cliModule/build.gradle
+++ b/modules/cliModule/build.gradle
@@ -4,7 +4,7 @@ plugins {
 }
 
 group 'nkp.pspValidator'
-version '2.1'
+version '2.2'
 
 // Create a JAR task
 jar {
@@ -32,7 +32,6 @@ dependencies {
 
 task run(type: JavaExec) {
     classpath = sourceSets.main.runtimeClasspath
-    //TODO: fix package
     main = 'nkp.pspValidator.cli.Main'
 }
 
@@ -48,12 +47,12 @@ task runVersion(type: JavaExec) {
     args = ['--version']
 }
 
-task runTestMinify(type: JavaExec) {
+task runTestValidate(type: JavaExec) {
     classpath = sourceSets.main.runtimeClasspath
     main = 'nkp.pspValidator.cli.Main'
-    args = ['--action', "BUILD_MINIFIED_PACKAGE",
-            '--psp', '/Users/martin/IdeaProjects/komplexni-validator/modules/sharedModule/src/test/resources/monograph_1.2/b50eb6b0-f0a4-11e3-b72e-005056827e52',
-            '--minified-psp-dir', '/Users/martin/tmp/komplexni-validator',
+    args = ['--action', "VALIDATE_PSP",
+            '--psp', '/Users/martin/IdeaProjects/validator-e-publikaci/modules/sharedModule/src/test/resources/e-monograph_2.3/nk-mbc228',
+            '--config-dir', '/Users/martin/IdeaProjects/validator-e-publikaci/modules/sharedModule/src/main/resources/nkp/pspValidator/shared/validatorConfig',
     ]
 }
 
@@ -75,6 +74,6 @@ tasks.withType(JavaCompile) {
 //runVersion - spusti nkp.pspValidator.shared.Main.main("--version")
 //./gradlew :modules:cliModule:runVersion
 
-//runTestMinify - spusti CLI s akci BUILD_MINIFIED_PACKAGE
-//./gradlew :modules:cliModule:runTestMinify
+//runTestValidate - spusti CLI s akci BUILD_MINIFIED_PACKAGE
+//./gradlew :modules:cliModule:runTestValidate
 
