--- a/modules/cliModule/build.gradle
+++ b/modules/cliModule/build.gradle
@@ -51,7 +51,8 @@ task runTestValidate(type: JavaExec) {
     classpath = sourceSets.main.runtimeClasspath
     main = 'nkp.pspValidator.cli.Main'
     args = ['--action', "VALIDATE_PSP",
-            '--psp', '/Users/martin/IdeaProjects/validator-e-publikaci/modules/sharedModule/src/test/resources/e-monograph_2.3/nk-mbc228',
+            //'--psp', '/Users/martin/IdeaProjects/validator-e-publikaci/modules/sharedModule/src/test/resources/e-monograph_2.3/nk-mbc228',
+            '--psp', '/Users/martin/IdeaProjects/komplexni-validator-samples/src/test/resources/eborn_monografie_2.3/PDF/emono_svazek/RDA/aba007-0000f8',
             '--config-dir', '/Users/martin/IdeaProjects/validator-e-publikaci/modules/sharedModule/src/main/resources/nkp/pspValidator/shared/validatorConfig',
     ]
 }
