--- a/.gitignore
+++ b/.gitignore
@@ -204,3 +204,7 @@ gradle-app.setting
 # End of https://www.gitignore.io/api/gradle,java,intellij,intellij+iml,macos
 /modules/guiModule/config.properties
 /modules/guiModule/logs/
+
+# VSCode settings
+
+.vscode/
